--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ setuptools==62.1.0
 numpy==1.20.3
 pandas==1.3.4
 scikit-learn==1.0.1
-satatsmodels==0.13.1
-﻿scipy==1.7.2
+statsmodels==0.13.1
+scipy==1.7.2
 joblib==1.1.0
 tqdm==4.62.3
 torch==1.10.0
