--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
-setuptools==62.1.0
-numpy==1.20.3
+pytorch-lightning==1.5.2
 pandas==1.3.4
+numpy==1.20.3
+anndata==0.7.8
+tqdm==4.62.3
 scikit-learn==1.0.1
-statsmodels==0.13.1
 scipy==1.7.2
 joblib==1.1.0
-tqdm==4.62.3
-torch==1.10.0
-pytorch-lightning==1.5.2
-umap-learn==0.5.2
+scikit-image==0.19.2
+statsmodels==0.13.1
 matplotlib==3.5.0
 seaborn==0.11.2
+datashader==0.14.0
 bezier==2021.2.12
-networkx==2.6.3
-holoviews[all]
-pygraphviz
-scikit-image
-datashader
-anndata
+umap-learn==0.5.2
+jupyterlab==3.3.4
+
