--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 pytorch-lightning==1.5.2
+torch==1.10.0
 pandas==1.3.4
 numpy==1.20.3
 anndata==0.8.0
@@ -14,4 +15,5 @@ datashader==0.14.0
 bezier==2021.2.12
 umap-learn==0.5.2
 jupyterlab==3.3.4
-
+setuptools==59.5.0
+setuptools-scm==6.3.2
