--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@ seaborn==0.11.2
 datashader==0.14.0
 bezier==2021.2.12
 umap-learn==0.5.2
-jupyterlab==3.3.4
+jupyterlab
 setuptools==59.5.0
 setuptools-scm==6.3.2
